add getUsers
